	Fixed reading of PP 2.0
	(Release 1.7.8)
Sep 2013
	LocARNATE: new code, improvements
	Exparna-P: Suboptimal traceback and improvements
	Change default behavior of mlocarna for sequence-local alignment: proceed
	with only-local subalignments; options local-progressive and
	global-progressive control behavior, where --global-progressive
	reactivates the previous one.
	(Release 1.7.9)
Oct 2013
	Newick bugfix
	Small modifications for library use (e.g. for carna)
	(Release 1.7.10)
Nov 2013
	Improve max-diff heuristic (without reference alignment): make
	symmetric and always allow sufficiently large deviation
	(Release 1.7.11)
	Fix bug in locarna_rnafold_pp (reading clustalw from stdin)
	Fix bug concerning structure constraints
	Update format conversions in mlocarna to pp 2.0 format
	Support for fixed structure constraints (directly in C++)
	(Release 1.7.12)
	Fix bug that compromised LocARNA-P w/ anchor-constraints in 1.7.12
	In-loop support for fixed structure constraints
	(Release 1.7.13)
	Bugfix: computation of consensus anchor constraints could fail; now resolve
	name clashs by selecting lexicographically smaller name.
	(Release 1.7.13.1)
	Handle inconsistencies due to anchor constraints in conflict
	with other constraints/heuristics, e.g. max-diff: 1) accept -inf
	pairwise similarities for guide tree construction; 2) clear
	consensus anchor strings with duplicate names
	(Release 1.7.14)
	Fix bug concerning iterative alignment and alignment evaluation
	Rename locarna_X to exparna_p
	ExpaRNA-P code "publication ready"
	(Release 1.7.15)
	ExpaRNA-P rename of tools
	(Release 1.7.16) 
        Second type of stacking terms: new-stacking
	Add heuristic to restrict maximum number of "significant" base
	pairs: max-bps-length-ratio
	Add max-diff restriction at arc match ends: --max-diff-at-am
	Restructure parameter passing to Aligner* classes: use "named
	argument" idiom
	(Release 1.7.17pre)
	max-bps/uil/bpil-length-ratio for SPARSE/ExparnaP
	(Release 1.7.17pre2)
	