@@ -1,4 +1,4 @@
-#!/usr/bin/perl -w
+#!/usr/bin/env perl
 
 ############################################################
 ##
@@ -10,7 +10,7 @@
 ## ##########################################################
 
 
-
+use warnings;
 use strict;
 
 ##------------------------------------------------------------
