@@ -1,4 +1,4 @@
-#!/usr/bin/perl
+#!/usr/bin/env perl
 
 ############################################################
 #
@@ -13,8 +13,8 @@
 #  
 ############################################################
 
-use strict;
 use warnings;
+use strict;
 
 ### --------------------
 
