@@ -1,9 +1,14 @@
-#!/usr/bin/perl -w
+#!/usr/bin/env perl
 
 ## multiple alignment using t-coffee
 
-use MLocarna;
+use warnings;
 use strict;
+
+use FindBin;
+use lib "$FindBin::Bin/../lib/perl";
+
+use MLocarna;
 
 ## ------------------------------------------------------------
 # global options
