@@ -1,6 +1,6 @@
-#!/usr/bin/perl
-#!/usr/bin/perl -w
+#!/usr/bin/env perl
 
+use warnings;
 use strict;
 
 ##------------------------------------------------------------
